--- a/datasets/templates/datasets/editrecord.html
+++ b/datasets/templates/datasets/editrecord.html
@@ -5,13 +5,14 @@
 <main role="main" id="maincontent" class="content">
     <div class="content-inner ">
           <form action="." method="post" class="" id="newdata2-form" role="form">
+              <p>You are currently editing the record: {{ rows }}</p>
               {% csrf_token %}
               {% for form in forms %}
             <div class="layout layout-fixedright">
               <div class="layout-column">
-                 <h2 class="section-heading header text_b">Column Name no.{{ forloop.counter }} </h2>
+                 <h2 class="section-heading header text_b">Data for "{{ cname.pop }}" Column</h2>
                 <div class="form-control contributor-list-edit-container">
-                  <input autocomplete="off" class="form-control-input form-control-input-dominant " type="text" id="id_{{ form.cname.name }}" name="{{ form.cname.name }}" value="" placeholder="Enter Column Name" data-dataset-field autofocus/>
+                  <input autocomplete="off" class="form-control-input form-control-input-dominant " type="text" id="id_{{ form.dvalue.name }}" name="{{ form.dvalue.name }}" value="" placeholder="Enter Value for the Corresponding Column" data-dataset-field autofocus/>
                 </div>
               </div>
               </div>
