--- a/datasets/templates/datasets/datadetail.html
+++ b/datasets/templates/datasets/datadetail.html
@@ -29,8 +29,8 @@
         </div>
         <p>
           <span class="datasetslist-dataset-publish-date">{{ dataset.DataSet_Posted }}</span>
-          <span class="datasetslist-dataset-in-label">Status: {% if dataset.DataSet_Status %} Approved {% else %} Not yet Approved
-            {% if request.user.is_superuser and dataset.DataSet_Status == False %}
+          <span class="datasetslist-dataset-in-label">Status: {{ dataset.DataSet_Status }}
+            {% if request.user.is_superuser %}
             <button onclick="approveDataSet()" class="btn waves-effect waves-light red darken-1">Approve this Dataset</button>
             {% endif %}
           </span>
@@ -188,7 +188,7 @@
     var approvedatasetUrl = '/api/datasets/{{ dataset.id }}/'
     if (confirm('Are you sure you want to approve this dataset?')){
       var params = {
-        is_accepted: true
+        is_accepted: Approved
       };
       $.ajax({
         type: 'PATCH',
