--- a/datasets/templates/datasets/datasets.html
+++ b/datasets/templates/datasets/datasets.html
@@ -7,9 +7,11 @@
               <ul class="right   hide-on-med-and-down">
                 <li class="header-mdata-nav-expandable">
                   <a href="{% url 'datasets:data' %}" class="header-mdata-nav-loggedout-nav-item header-mdata-nav-item-expands">Browse datasets<span class="icon icon-chevron-down-accent"></span></a>
+                  {% if user.is_authenticated %}
                 <li class="header-mdata-nav-expandable">
                   <a href="{% url 'datasets:mydata' %}" class="header-mdata-nav-loggedout-nav-item header-mdata-nav-item-expands">My datasets<span class="icon icon-chevron-down-accent"></span></a>
                 </li>
+                {% endif %}
               </ul>
             </nav>
           </div>
@@ -34,7 +36,7 @@
           <div class="contributor-list-container datasetslist-dataset-contributors">
           <ul class="contributor-list">
               <li class="contributor-list-contributor" data-component="contributorTooltip">
-                <a data-component="contributorProfileLink" data-component-options='{"profileLink":"https://www.mendeley.com/profiles/mostafa-al-sayed/"}' class="contributor-list-contributor-name" href="#" target="_blank">{{ dataset.DataSet_Poster }}</a>
+                <a data-component="contributorProfileLink" data-component-options='{"profileLink":"https://www.mendeley.com/profiles/mostafa-al-sayed/"}' class="contributor-list-contributor-name" href="{% url 'datasets:profile' dataset.DataSet_Poster.id %}" target="_blank">{{ dataset.DataSet_Poster.get_full_name }}</a>
       </li>
           </ul>
         </div>
