--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
-	<title>{% block title %} TANOM: Datasets Portal{% endblock %}</title> {% load staticfiles %}
+	<title>{% block title %} HALANG: Datasets Portal{% endblock %}</title> {% load staticfiles %}
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
@@ -117,7 +117,7 @@ button {
 					<div class="container">
 						<div class="nav-header">
 							<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-							<h1 id="fh5co-logo"><a href="{% url 'datasets:index' %}">TAN<span>OM</span></a></h1>
+							<h1 id="fh5co-logo"><a href="{% url 'datasets:index' %}">HA<span>LANG</span></a></h1>
 							<!-- START #fh5co-menu-wrap -->
 							<nav id="fh5co-menu-wrap" role="navigation">
 								<ul class="sf-menu" id="fh5co-primary-menu">
