--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 	<div class="fh5co-overlay"></div>
 	<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url({% static 'images/endemic.jpg' %});">
 		<div class="desc animate-box">
-			<h2>TANOM: An Open Data Catalog</h2>
-			<span>with an API Endpoint focused on Philippine Endemic Plants</a></span>
+			<h2>HALANG: DATASETS BUILDING AND ANALYSIS </h2>
+			<span>with an API Endpoint focused on Endemic Birds in Mindanao</a></span>
 		</div>
 	</div>
 </div>
@@ -15,7 +15,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-				<h1>AN OPEN DATA CATALOG AND API FOR PHILIPPINE ENDEMIC PLANTS</h1>
+				<h1>A DATASETS BUILDING AND API FOR ENDEMIC BIRDS IN MINDANAO</h1>
 
 			</div>
 		</div>
