--- a/templates/whatwedo.html
+++ b/templates/whatwedo.html
@@ -19,7 +19,7 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 						<h3>About Us</h3>
-						<p>We are researchers from the University of the Immaculate Conception that are tasked to create a portal for an Datasets Building and have an API Endpoint for each dataset for the endemic Birds found in Mindanao.</p>
+						<p>We are researchers from the University of the Immaculate Conception that are tasked to create a portal for an Open Data Catalog and have an API Endpoint for each dataset for the endemic plants found in the Philippines.</p>
 					</div>
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 						<div class="services animate-box">
 							<span><i class="icon-tools"></i></span>
 							<h3>Scope and Limitation</h3>
-							<p>The researchers of study have limited their research to endemic Birds. They are particular that they are only in the Mindanao Region. </p>
+							<p>The researchers of study have limited their research to endemic plants. They are particular that they are only in the Southern Mindanao Region. </p>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-4">
