--- a/templates/base.html
+++ b/templates/base.html
@@ -22,94 +22,83 @@
 	<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 	<!-- Superfish -->
 	<link rel="stylesheet" href="{% static 'css/superfish.css' %}">
-	<link rel="stylesheet" href="{% static 'css/style1.css' %}">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<link rel="stylesheet" href="{% static 'css/data.css' %}">
-	<link rel="stylesheet" href="{% static 'css/table.css' %}">
 	<!-- datatables -->
-	<link href="//datatables.net/download/build/nightly/jquery.dataTables.css" rel="stylesheet" type="text/css" />
+	<link href="//datatables.net/download/build/nightly/jquery.dataTables.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.1/css/buttons.dataTables.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js' %}"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-<style>
-  table,  th {
-   
-   border-collapse: separate;
-   border-spacing: 15px;
- }
+	<style>
+		#myInput {
+			background-image: url('{% static '/css/searchicon.png' %}');
+			background-position: 10px 12px;
+			background-repeat: no-repeat;
+			width: 100%;
+			font-size: 20px;
+			padding: 12px 20px 12px 40px;
+			border: 1px solid #ddd;
+			margin-bottom: 12px;
+		}
 
-	* {
-  box-sizing: border-box;
-}
+		input[type=text], input[type=password], input[type=email] {
+			width: 100%;
+			color: black;
+			padding: 12px 20px;
+			margin: 8px 0;
+			display: inline-block;
+			border: 1px solid #ccc;
+			box-sizing: border-box;
+		}
 
-#myInput {
-  background-image: url('{% static '/css/searchicon.png' %}');
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  width: 100%;
-  font-size: 20px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-}
+		/* Set a style for all buttons */
+		button {
+			background-color: #4CAF50;
+			color: white;
+			padding: 14px 20px;
+			margin: 8px 0;
+			border: none;
+			cursor: pointer;
+			/*			width: 100%;*/
+		}
 
-input[type=text], input[type=password], input[type=email] {
-    width: 100%;
-    color: black;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
+		/* Extra styles for the cancel button */
+		.cancelbtn {
+			padding: 14px 20px;
+			background-color: #f44336;
+			width: 300px;
+		}
 
-/* Set a style for all buttons */
-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
+		/* Float cancel and signup buttons and add an equal width */
+		.cancelbtn,.signupbtn {
+			float: left;
+			width: 50%;
+		}
 
-/* Extra styles for the cancel button */
-.cancelbtn {
-    padding: 14px 20px;
-    background-color: #f44336;
-    width: 300px;
-}
+		/* Add padding to container elements */
+		.container {
+			padding: 16px;
+		}
 
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn,.signupbtn {
-    float: left;
-    width: 50%;
-}
+		/* Clear floats */
+		.clearfix::after {
+			content: "";
+			clear: both;
+			display: table;
+		}
 
-/* Add padding to container elements */
-.container {
-    padding: 16px;
-}
-
-/* Clear floats */
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
-       width: 100%;
-    }
-}
-</style>
+		/* Change styles for cancel button and signup button on extra small screens */
+		@media screen and (max-width: 300px) {
+			.cancelbtn, .signupbtn {
+				width: 100%;
+			}
+		}
+	</style>
 </head>
 
 <body>
@@ -150,7 +139,7 @@ button {
 									</li>
 									{% else %}
 									<li>
-									<a class="fh5co-sub-ddown">Anonymous User</a>
+										<a class="fh5co-sub-ddown">Anonymous User</a>
 										<ul class="fh5co-sub-menu">
 											<li><a href="{% url 'datasets:signup' %}">Sign up</a></li>
 											<li><a href="{% url 'datasets:signin' %}">Sign In</a></li>
@@ -163,50 +152,48 @@ button {
 					</div>
 				</header>
 			</div>
-		
-	{% block body %}
-	{% endblock %}
+			
+			{% block body %}
+			{% endblock %}
 
-<!-- fh5co-blog-section -->
-<footer>
-	<div id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center">
+			<!-- fh5co-blog-section -->
+			<footer>
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3 text-center">
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div>
-	</div>
-</footer>
+			</footer>
 
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<!-- jQuery Easing -->
-	<script type="text/javascript" src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-	<!-- Bootstrap -->
-	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-	<!-- Waypoints -->
-	<script type="text/javascript" src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-	<!-- Stellar -->
-	<script type="text/javascript" src="{% static 'js/jquery.stellar.min.js' %}"></script>
-	<!-- Superfish -->
-	<script type="text/javascript" src="{% static 'js/hoverIntent.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/superfish.js' %}"></script>
+			<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+			<!-- jQuery Easing -->
+			<script type="text/javascript" src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+			<!-- Bootstrap -->
+			<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+			<!-- Waypoints -->
+			<script type="text/javascript" src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+			<!-- Stellar -->
+			<script type="text/javascript" src="{% static 'js/jquery.stellar.min.js' %}"></script>
+			<!-- Superfish -->
+			<script type="text/javascript" src="{% static 'js/hoverIntent.js' %}"></script>
+			<script type="text/javascript" src="{% static 'js/superfish.js' %}"></script>
 
-	<!-- Main JS (Do not remove) -->
-	<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+			<!-- Main JS (Do not remove) -->
+			<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
-	<!-- datatables -->
-	<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
-	<script src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
-	<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.flash.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
-	<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
-	<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.print.min.js"></script>
-	{% block js %}
-	{% endblock %}
+			<!-- datatables -->
+			<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+			<script src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
+			<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.flash.min.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
+			<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
+			{% block js %}
+			{% endblock %}
 
-</body>
-</html>
-
+		</body>
+		</html>
