--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
+	<!-- FOR THE ICONS-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,300' rel='stylesheet' type='text/css'>
@@ -98,6 +99,18 @@
 				width: 100%;
 			}
 		}
+
+		#notification_count {
+			padding: 3px 7px 3px 7px;
+			background: #cc0000;
+			color: #ffffff;
+			font-weight: bold;
+			margin-left: 109px;
+			border-radius: 9px;
+			position: absolute;
+			margin-top: 3px;
+			font-size: 11px;
+		}
 	</style>
 </head>
 
@@ -129,13 +142,31 @@
 											<li><a href="{% url 'datasets:whatwedo' %}">What We Do</a></li>
 										</ul>
 									</li>
-									{% if user.is_authenticated %}
+									{% if user.is_authenticated and not request.user.is_superuser %}
 									<li>
 										<a class="fh5co-sub-ddown">{{ user.get_full_name }}</a>
 										<ul class="fh5co-sub-menu">
 											<li><a href="{% url 'datasets:profile' user.id %}">My Profile</a></li>
 											<li><a href="{% url 'datasets:signout' %}">Signout</a></li>
 										</ul>
+									</li>
+									{% elif request.user.is_superuser %}
+									<li>
+										{% if datasets %}
+										<span id="notification_count">{{ datasets.count }}</span>
+										<a class="fh5co-sub-ddown" id=notificationLink >{{ user.get_full_name }}</a>
+										<ul class="fh5co-sub-menu">
+											<li><a href="{% url 'datasets:review' %}">{{ datasets.count }} Datasets needs a Review</a></li>
+											<li><a href="{% url 'datasets:profile' user.id %}">My Profile</a></li>
+											<li><a href="{% url 'datasets:signout' %}">Signout</a></li>
+										</ul>
+										{% else %}
+										<a class="fh5co-sub-ddown" id=notificationLink >{{ user.get_full_name }}</a>
+										<ul class="fh5co-sub-menu">
+											<li><a href="{% url 'datasets:profile' user.id %}">My Profile</a></li>
+											<li><a href="{% url 'datasets:signout' %}">Signout</a></li>
+										</ul>
+										{% endif %}
 									</li>
 									{% else %}
 									<li>
@@ -168,32 +199,58 @@
 				</div>
 			</footer>
 
-			<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-			<!-- jQuery Easing -->
-			<script type="text/javascript" src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-			<!-- Bootstrap -->
-			<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-			<!-- Waypoints -->
-			<script type="text/javascript" src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-			<!-- Stellar -->
-			<script type="text/javascript" src="{% static 'js/jquery.stellar.min.js' %}"></script>
-			<!-- Superfish -->
-			<script type="text/javascript" src="{% static 'js/hoverIntent.js' %}"></script>
-			<script type="text/javascript" src="{% static 'js/superfish.js' %}"></script>
+			<script type="text/javascript" >
+				$(document).ready(function() {
+					$("#notificationLink").click(function() {
+						$("#notificationContainer").fadeToggle(300);
+						$("#notification_count").fadeOut("slow");
+						return false;
+					});
 
-			<!-- Main JS (Do not remove) -->
-			<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+				//Document Click
+				$(document).click(function(){
+					$("#notificationContainer").hide();
+				});
+				//Popup Click
+				$("#notificationContainer").click(function() {
+					return false
+				});
+			});
+		</script>
 
-			<!-- datatables -->
-			<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
-			<script src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
-			<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.flash.min.js"></script>
-			<script src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-			<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
-			<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
-			<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
-			{% block js %}
-			{% endblock %}
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<!-- jQuery Easing -->
+		<script type="text/javascript" src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+		<!-- Bootstrap -->
+		<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+		<!-- Waypoints -->
+		<script type="text/javascript" src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+		<!-- Stellar -->
+		<script type="text/javascript" src="{% static 'js/jquery.stellar.min.js' %}"></script>
+		<!-- Superfish -->
+		<script type="text/javascript" src="{% static 'js/hoverIntent.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/superfish.js' %}"></script>
+		<!-- Main JS (Do not remove) -->
+		<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+		<script src=///assets.adobedtm.com/376c5346e33126fdb6b2dbac81e307cbacfd7935/satelliteLib-4a7497b2b1d1900fe42ef2c13e32daeedf9c1642.js></script>
 
-		</body>
-		</html>
+		<!-- Optimizely AB Testing Tags -->
+		<script type="text/javascript" async="" src=https://cdn.optimizely.com/js/238413261.js></script>
+		<!-- Optimizely AB Testing Tags -->
+
+
+		<!-- datatables -->
+		<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+		<script src="https://cdn.datatables.net/buttons/1.5.1/js/dataTables.buttons.min.js"></script>
+		<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.flash.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js"></script>
+		<script src="//cdn.datatables.net/buttons/1.5.1/js/buttons.html5.min.js"></script>
+
+
+		{% block js %}
+		{% endblock %}
+
+	</body>
+	</html>
