--- a/templates/about.html
+++ b/templates/about.html
@@ -42,11 +42,11 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="{% static 'images/isaiah.jpg' %}" alt=""></a>
+							<a href="#"><img class="img-responsive" src="{% static 'images/christine.jpg' %}" alt=""></a>
 							<div class="image-popup" href="#">
 								<div class="prod-title">
-									<h2>Isaiah Evans Villa Abrille</h2>
-									<h3><b><span>Project Manager and Back-End</span></b></h3>
+									<h2>Christine Joy Busalanan</h2>
+									<h3><b><span>Back-End</span></b></h3>
 									
 									<h2><a href="#"><i class="icon-twitter2"></i></a><a href="#"><i class="icon-facebook2"></i></a></h2>
 								</div>
@@ -57,10 +57,10 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="{% static 'images/reno.jpg' %}" alt=""></a>
+							<a href="#"><img class="img-responsive" src="{% static 'images/jesmar.jpg' %}" alt=""></a>
 							<div class="image-popup" href="#">
 								<div class="prod-title">
-									<h2>Reno Marco D. Fañdino</h2>
+									<h2>Jesmar James L. Rama</h2>
 									<h3><b><span>Front-End</span></b></h3>
 									
 									<h2><a href="#"><i class="icon-twitter2"></i></a><a href="#"><i class="icon-facebook2"></i></a></h2>
@@ -68,15 +68,32 @@
 							</div> 
 						</div>
 					</div>
+
+					<div class="row">
+					<div class="col-lg-4 col-md-4">
+						<div class="fh5co-blog animate-box">
+							<a href="#"><img class="img-responsive" src="{% static 'images/jasper.jpg' %}" alt=""></a>
+							<div class="image-popup" href="#">
+								<div class="prod-title">
+									<h2>Seth Jasper Napalit</h2>
+									<h3><b><span>Project Manager</span></b></h3>
+									
+									<h2><a href="#"><i class="icon-twitter2"></i></a><a href="#"><i class="icon-facebook2"></i></a></h2>
+								</div>
+							</div> 
+						</div>
+					</div>
+				</div>
+			</div>
 					
 					
 					<div class="row">
 					<div class="col-lg-4 col-md-4">
 						<div class="fh5co-blog animate-box">
-							<a href="#"><img class="img-responsive" src="{% static 'images/elven.jpg' %}" alt=""></a>
+							<a href="#"><img class="img-responsive" src="{% static 'images/nikko.jpg' %}" alt=""></a>
 							<div class="image-popup" href="#">
 								<div class="prod-title">
-									<h2>Elven Earl A. Tsuruoka</h2>
+									<h2>Nikko B. Tulang</h2>
 									<h3><b><span>Documentation</span></b></h3>
 									
 									<h2><a href="#"><i class="icon-twitter2"></i></a><a href="#"><i class="icon-facebook2"></i></a></h2>
