--- a/templates/base.html
+++ b/templates/base.html
@@ -199,7 +199,7 @@
 				</div>
 			</footer>
 
-			<script type="text/javascript" >
+			<script>
 				$(document).ready(function() {
 					$("#notificationLink").click(function() {
 						$("#notificationContainer").fadeToggle(300);
