--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -3,9 +3,9 @@
 {% block body %}
 <!-- start of banner-->
 <style>
-tfoot {
-     display: table-header-group;
-}
+  tfoot {
+   display: table-header-group;
+ }
 </style>
 
 <div class="fh5co-hero fh5co-hero-2">
@@ -163,6 +163,9 @@ tfoot {
 <script>
   $(document).ready(function() {
     var table = $('#example').DataTable( {
+      "scrollY": '50vh',
+      "scrollCollapse": true,
+      "scrollX": true,
       initComplete: function () {
         this.api().columns().every( function () {
           var column = this;
