--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -6,6 +6,11 @@
   tfoot {
    display: table-header-group;
  }
+  table {
+    overflow: scroll,
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
 </style>
 
 <div class="fh5co-hero fh5co-hero-2">
