--- a/templates/datadetail.html
+++ b/templates/datadetail.html
@@ -7,7 +7,7 @@
    display: table-header-group;
  }
   table {
-    overflow: scroll,
+    overflow: auto,
     overflow-x: scroll;
     overflow-y: scroll;
   }
