--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,12 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	<style>
+		body {
+			overflow: auto,
+			overflow-x: scroll;
+			overflow-y: scroll;
+		}
+
 		#myInput {
 			background-image: url('{% static '/css/searchicon.png' %}');
 			background-position: 10px 12px;
